// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayName generates a default color for the runner jest-runner 1`] = `"yellow"`;

exports[`displayName generates a default color for the runner jest-runner-eslint 1`] = `"magenta"`;

exports[`displayName generates a default color for the runner jest-runner-tsc 1`] = `"red"`;

exports[`displayName generates a default color for the runner jest-runner-tslint 1`] = `"green"`;

exports[`displayName generates a default color for the runner undefined 1`] = `"white"`;

exports[`displayName should throw an error when displayName is is an empty object 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option "<bold>displayName</>" must be of type:</>
<red></>
<red>  {</>
<red>    name: string;</>
<red>    color: string;</>
<red>  }</>
<red></>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`displayName should throw an error when displayName is missing color 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option "<bold>displayName</>" must be of type:</>
<red></>
<red>  {</>
<red>    name: string;</>
<red>    color: string;</>
<red>  }</>
<red></>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`displayName should throw an error when displayName is missing name 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option "<bold>displayName</>" must be of type:</>
<red></>
<red>  {</>
<red>    name: string;</>
<red>    color: string;</>
<red>  }</>
<red></>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`displayName should throw an error when displayName is using invalid values 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option "<bold>displayName</>" must be of type:</>
<red></>
<red>  {</>
<red>    name: string;</>
<red>    color: string;</>
<red>  }</>
<red></>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`extensionsToTreatAsEsm should enforce leading dots 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option: <bold>extensionsToTreatAsEsm: ['ts']</> includes a string that does not start with a period (<bold>.</>).</>
<red>  Please change your configuration to <bold>extensionsToTreatAsEsm: ['.ts']</>.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`extensionsToTreatAsEsm throws on .cjs 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option: <bold>extensionsToTreatAsEsm: ['.cjs']</> includes <bold>'.cjs'</> which is always treated as CommonJS.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`extensionsToTreatAsEsm throws on .js 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option: <bold>extensionsToTreatAsEsm: ['.js']</> includes <bold>'.js'</> which is always inferred based on <bold>type</> in its nearest <bold>package.json</>.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`extensionsToTreatAsEsm throws on .mjs 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option: <bold>extensionsToTreatAsEsm: ['.mjs']</> includes <bold>'.mjs'</> which is always treated as an ECMAScript Module.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`logs a deprecation warning when 'browser' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"browser"</> has been deprecated. Please install "browser-resolve" and use the "resolver" option in Jest configuration as shown in the documentation: https://jestjs.io/docs/configuration#resolver-string</>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'extraGlobals' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"extraGlobals"</> was replaced by <bold>"sandboxInjectedGlobals"</>.</>
<yellow></>
<yellow>  Please update your configuration.</>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'moduleLoader' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"moduleLoader"</> was replaced by <bold>"runtime"</>.</>
<yellow></>
<yellow>  Please update your configuration.</>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'preprocessorIgnorePatterns' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"preprocessorIgnorePatterns"</> was replaced by <bold>"transformIgnorePatterns"</>, which support multiple preprocessors.</>
<yellow></>
<yellow>  Please update your configuration.</>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'scriptPreprocessor' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"scriptPreprocessor"</> was replaced by <bold>"transform"</>, which support multiple preprocessors.</>
<yellow></>
<yellow>  Please update your configuration.</>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'setupTestFrameworkScriptFile' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"setupTestFrameworkScriptFile"</> was replaced by configuration <bold>"setupFilesAfterEnv"</>, which supports multiple paths.</>
<yellow></>
<yellow>  Please update your configuration.</>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'testPathDirs' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"testPathDirs"</> was replaced by <bold>"roots"</>.</>
<yellow></>
<yellow>  Please update your configuration.</>
<yellow>  </>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'testURL' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"testURL"</> was replaced by passing the URL via <bold>"testEnvironmentOptions.url"</>.</>
<yellow></>
<yellow>  Please update your configuration.</>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`logs a deprecation warning when 'timers' option is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<yellow><bold><bold>●</><bold> Deprecation Warning</>:</>
<yellow></>
<yellow>  Option <bold>"timers"</> was replaced by <bold>"fakeTimers"</>.</>
<yellow></>
<yellow>  Please update your configuration.</>
<yellow></>
<yellow>  <bold>Configuration Documentation:</></>
<yellow>  https://jestjs.io/docs/configuration</>
<yellow></>",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`preset throws when module was found but no "jest-preset.js" or "jest-preset.json" files 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Module <bold>exist-but-no-jest-preset</> should have "jest-preset.js" or "jest-preset.json" file at the root.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`preset throws when preset not found 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Preset <bold>doesnt-exist</> not found.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`reporters throws an error if first value in the tuple is not a string 1`] = `
"<red><bold><bold>● </><bold>Reporter Validation Error</>:</>
<red></>
<red>  Unexpected value for Path at index 0 of reporter at index 0</>
<red>  Expected:</>
<red>    <bold><red>string</><red></></>
<red>  Got:</>
<red>    <bold><green>number</><red></></>
<red>  Reporter configuration:</>
<red>    <bold><green>[</><red></></>
<red><bold><green>      123</><red></></>
<red><bold><green>    ]</><red></></>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`reporters throws an error if second value in the tuple is not an object 1`] = `
"<red><bold><bold>● </><bold>Reporter Validation Error</>:</>
<red></>
<red>  Unexpected value for Reporter Configuration at index 1 of reporter at index 0</>
<red>  Expected:</>
<red>    <bold><red>object</><red></></>
<red>  Got:</>
<red>    <bold><green>boolean</><red></></>
<red>  Reporter configuration:</>
<red>    <bold><green>[</><red></></>
<red><bold><green>      "some-reporter",</><red></></>
<red><bold><green>      true</><red></></>
<red><bold><green>    ]</><red></></>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`reporters throws an error if second value is missing in the tuple 1`] = `
"<red><bold><bold>● </><bold>Reporter Validation Error</>:</>
<red></>
<red>  Unexpected value for Reporter Configuration at index 1 of reporter at index 0</>
<red>  Expected:</>
<red>    <bold><red>object</><red></></>
<red>  Got:</>
<red>    <bold><green>undefined</><red></></>
<red>  Reporter configuration:</>
<red>    <bold><green>[</><red></></>
<red><bold><green>      "some-reporter"</><red></></>
<red><bold><green>    ]</><red></></>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`reporters throws an error if value is neither string nor array 1`] = `
"<red><bold><bold>● </><bold>Reporter Validation Error</>:</>
<red></>
<red>  Reporter at index 0 must be of type:</>
<red>    <bold><green>array or string</><red></></>
<red>  but instead received:</>
<red>    <bold><red>number</><red></></>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`rootDir throws if the options is missing a rootDir property 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Configuration option <bold>rootDir</> must be specified.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`runner throw error when a runner is not found 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Jest Runner <bold>missing-runner</> cannot be found. Make sure the <bold>runner</> configuration option points to an existing node module.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`testEnvironment throws on invalid environment names 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Test environment <bold>phantom</> cannot be found. Make sure the <bold>testEnvironment</> configuration option points to an existing node module.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`testMatch throws if testRegex and testMatch are both specified 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Configuration options <bold>testMatch</> and <bold>testRegex</> cannot be used together.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`testPathPattern <regexForTestFiles> ignores invalid regular expressions and logs a warning 1`] = `"<red>  Invalid testPattern a( supplied. Running all tests instead.</>"`;

exports[`testPathPattern --testPathPattern ignores invalid regular expressions and logs a warning 1`] = `"<red>  Invalid testPattern a( supplied. Running all tests instead.</>"`;

exports[`testTimeout should throw an error if timeout is a negative number 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Option "<bold>testTimeout</>" must be a natural number.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;

exports[`watchPlugins throw error when a watch plugin is not found 1`] = `
"<red><bold><bold>● </><bold>Validation Error</>:</>
<red></>
<red>  Watch plugin <bold>missing-plugin</> cannot be found. Make sure the <bold>watchPlugins</> configuration option points to an existing node module.</>
<red></>
<red>  <bold>Configuration Documentation:</></>
<red>  https://jestjs.io/docs/configuration</>
<red></>"
`;
